--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,73 @@
+#######################################
+# 1. Node / React（Vite, Next など）
+#######################################
+node_modules/
+npm-debug.log*
+pnpm-debug.log*
+yarn-error.log*
+dist/
+build/
+.temp/
+.cache/
+.vite/
+
+#######################################
+# 2. Python / FastAPI
+#######################################
+# 仮想環境
+.venv/
+venv/
+# キャッシュ
+__pycache__/
+*.py[cod]
+# テスト出力
+.coverage
+htmlcov/
+
+#######################################
+# 3. 秘密＆資格情報
+#######################################
+.env
+.env.*        # .env.local など複数想定
+*.key
+*.pem
+*.p12
+
+#######################################
+# 4. ログ・一時ファイル
+#######################################
+*.log
+*.log.*
+nohup.out
+.DS_Store
+Thumbs.db
+
+#######################################
+# 5. エディタ・IDE／OS
+#######################################
+.vscode/
+.idea/
+*.iml
+*.swp
+# Mac の Spotlight
+._*
+# Windows のフォルダ設定
+desktop.ini
+
+#######################################
+# 6. GitHub Actions／CI の一時生成物
+#######################################
+/coverage/
+/reports/
+
+#######################################
+# 7. ドキュメントビルド（例：Sphinx）
+#######################################
+/docs/_build/
+/site/
+
+# 8. 追加で無視したいものがあれば、この下に追記
+
 # Logs
 logs
 *.log
